# Agentic_rag

./: .env.example  .gitignore  README.md  agent.py  config.py  data_loader.py  inget.py  main.py  pyproject.toml  requirements.txt  retriever_tool.py  setup.sh  user_input_handler.py
.devcontainer/: devcontainer.json
agentic_rag/: __init__.py  cli.py  initialization.py
agentic_rag/agents/: __init__.py  advanced_retrieval_agent.py  multi_agent_system.py  pdf_agent.py  rag_agent.py  web_agent.py
agentic_rag/config/: __init__.py  config.py  logging_config.py
agentic_rag/tools/: __init__.py  pdf_analyzer_tool.py  qdrant_retriever_tool.py  qdrant_vector.py  retriever_tool.py  visit_webpage.py  web_search_tool.py
agentic_rag/ui/: __init__.py  app.py
agentic_rag/utils/: __init__.py  agents.py  vectorstore.py  vectorstore_add.py
agentic_rag/vectorstore/: __init__.py  builder.py  embeddings.py  file_loaders.py  loader.py  splitters.py
docs/: DEPLOYMENT.md  PHASE1_IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md  UI_DEVELOPMENT_PLAN.md
docs/archive/: task-003-ui-caching-utils.md  task-004-ui-vectorstore-helpers.md  task-005-backend-agent-factories.md  task-006-ui-session-state.md  task-007-chat-interface.md  task-008-sidebar-component.md  task-009-document-uploader.md  task-01-project-setup.md  task-02-common-utils-structure.md  task-02-restructure.md  task-02-utils-structure.md
src/agents/: advanced_retrieval_agent.py  multi_agent_system.py  web_agent.py
src/tools/: knowledge_base.py  pdf_analyzer_tool.py  retriever_tool.py  web_search_tool.py
(+7 files in other folders)
